--- a/_drafts/2020-01-28-draft.md
+++ b/_drafts/2020-01-28-draft.md
@@ -23,6 +23,8 @@ Hi everyone! It's the latest Python for Microcontrollers newsletter brought you 
 
 [![](../assets/DIR-LOCATION/)]()
 
+CircuitPython Weekly for January 21st, 2020 is [on YouTube](https://youtu.be/h-5J80RdBv0) and [diode.zone](https://diode.zone/videos/watch/812983f5-304e-45e9-93cf-a0a737081e01)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
 ## Made with Mu
