Add Weekly, pydev, version numbers

--- a/_drafts/2020-01-28-draft.md
+++ b/_drafts/2020-01-28-draft.md
@@ -305,6 +305,10 @@ CircuitPython Weekly for January 21st, 2020 is [on YouTube](https://youtu.be/h-5
 
 [![Snekboard](../assets/01282020/12820snek.gif)](https://www.crowdsupply.com/keith-packard/snekboard)
 
+CircuitPython Weekly January 27th, 2020 [on YouTube](https://youtu.be/nmRyZCEP1CE).
+
+PyDev of the Week: Thomas Wouters on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/01/27/pydev-of-the-week-thomas-wouters/)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/01/21/circuitpython-powers-the-open-hardware-summit-for-2020-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [Snekboard by Keith Packard, an open-hardware python microcontroller for LEGO®](https://www.crowdsupply.com/keith-packard/snekboard).
 
 ## Coming soon
@@ -591,13 +595,13 @@ April 15-23, 2020, Pittsburgh, Pennsylvania, USA - The PyCon 2020 conference, wh
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [4.1.2](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.0.0-beta.4](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20190127](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.1](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a3](https://www.python.org/download/pre-releases/).
 
 [1574 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
