New/updated guides/libs, downloads, stars

--- a/_drafts/2020-02-04-draft.md
+++ b/_drafts/2020-02-04-draft.md
@@ -5,7 +5,7 @@ date: 2020-01-31 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -33,13 +33,21 @@ Why Mu? Mu tries to make it as easy as possible to get started with programming 
 
 ## New Learn Guides!
 
-[title](url) from [name](url)
+[Now Playing: Bluetooth Apple Media Service Display](https://learn.adafruit.com/now-playing-bluetooth-apple-media-service-display) from [John Park](https://learn.adafruit.com/users/johnpark)
+
+[PyPortal Titano Weather Station](https://learn.adafruit.com/pyportal-titano-weather-station) from [Noe and Pedro](https://learn.adafruit.com/users/pixil3d)
+
+[Cleveland Museum of Art PyPortal Frame](https://learn.adafruit.com/cleveland-museum-of-art-pyportal-frame) from [Dan Cogliano](https://learn.adafruit.com/users/cogliano)
+
+[PyGamer Thermal Camera with AMG8833](https://learn.adafruit.com/pygamer-thermal-camera-amg8833) from [Jan Goolsbey](https://learn.adafruit.com/users/HarpDude)
+
+[Adafruit MLX90640 IR Thermal Camera](https://learn.adafruit.com/adafruit-mlx90640-ir-thermal-camera) from [Kattni](https://learn.adafruit.com/users/kattni)
 
 ## Updated Guides - Now With More Python!
 
 **You can use CircuitPython libraries on Raspberry Pi!** We're updating all of our CircuitPython guides to show how to wire up sensors to your Raspberry Pi, and load the necessary CircuitPython libraries to get going using them with Python. We'll be including the updates here so you can easily keep track of which sensors are ready to go. Check it out!
 
-[title](url)
+Keep checking back for more updated guides!
 
 ## CircuitPython Libraries!
 
@@ -53,25 +61,57 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
+The current number of CircuitPython libraries is **209**!
 
 **New Libraries!**
 
 Here's this week's new CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_Display_BLE_Status](https://github.com/adafruit/Adafruit_CircuitPython_Display_BLE_Status)
+ * [Adafruit_CircuitPython_CPython](https://github.com/adafruit/Adafruit_CircuitPython_CPython)
+ * [Adafruit_CircuitPython_Debug_I2C](https://github.com/adafruit/Adafruit_CircuitPython_Debug_I2C)
+ * [Adafruit_CircuitPython_GFX](https://github.com/adafruit/Adafruit_CircuitPython_GFX)
+ * [Adafruit_CircuitPython_WSGI](https://github.com/adafruit/Adafruit_CircuitPython_WSGI)
+ * [Adafruit_CircuitPython_DPS310](https://github.com/adafruit/Adafruit_CircuitPython_DPS310)
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_BLE_Magic_Light](https://github.com/adafruit/Adafruit_CircuitPython_BLE_Magic_Light)
+ * [Adafruit_CircuitPython_ProgressBar](https://github.com/adafruit/Adafruit_CircuitPython_ProgressBar)
+ * [Adafruit_CircuitPython_LIS3MDL](https://github.com/adafruit/Adafruit_CircuitPython_LIS3MDL)
+ * [Adafruit_CircuitPython_BNO055](https://github.com/adafruit/Adafruit_CircuitPython_BNO055)
+ * [Adafruit_CircuitPython_BLE_Apple_Notification_Center](https://github.com/adafruit/Adafruit_CircuitPython_BLE_Apple_Notification_Center)
+ * [Adafruit_CircuitPython_NeoPixel_SPI](https://github.com/adafruit/Adafruit_CircuitPython_NeoPixel_SPI)
+ * [Adafruit_CircuitPython_TestRepo](https://github.com/adafruit/Adafruit_CircuitPython_TestRepo)
+ * [Adafruit_CircuitPython_DS3231](https://github.com/adafruit/Adafruit_CircuitPython_DS3231)
+ * [Adafruit_CircuitPython_MAX31855](https://github.com/adafruit/Adafruit_CircuitPython_MAX31855)
+ * [Adafruit_CircuitPython_Fingerprint](https://github.com/adafruit/Adafruit_CircuitPython_Fingerprint)
+ * [Adafruit_CircuitPython_Register](https://github.com/adafruit/Adafruit_CircuitPython_Register)
+ * [Adafruit_CircuitPython_Requests](https://github.com/adafruit/Adafruit_CircuitPython_Requests)
+ * [Adafruit_CircuitPython_BME680](https://github.com/adafruit/Adafruit_CircuitPython_BME680)
+ * [Adafruit_CircuitPython_BLE](https://github.com/adafruit/Adafruit_CircuitPython_BLE)
+ * [Adafruit_CircuitPython_HT16K33](https://github.com/adafruit/Adafruit_CircuitPython_HT16K33)
+ * [Adafruit_CircuitPython_PyPortal](https://github.com/adafruit/Adafruit_CircuitPython_PyPortal)
+ * [Adafruit_CircuitPython_Display_Text](https://github.com/adafruit/Adafruit_CircuitPython_Display_Text)
 
 **PyPI Download Stats!**
 
 We've written a special library called Adafruit Blinka that makes it possible to use CircuitPython Libraries on [Raspberry Pi and other compatible single-board computers](https://learn.adafruit.com/circuitpython-on-raspberrypi-linux/). Adafruit Blinka and all the CircuitPython libraries have been deployed to PyPI for super simple installation on Linux! Here are the top 10 CircuitPython libraries downloaded from PyPI in the last week, including the total downloads for those libraries:
 
-KATTNI TABLE HERE
+| Library                                                | Last Week   | Total |   
+|:-------                                                |:--------:   |:-----:|   
+| Adafruit-Blinka                                        | 1961        | 48552 |   
+| Adafruit_CircuitPython_BusDevice                       | 1240        | 25542 |   
+| Adafruit_CircuitPython_NeoPixel                        | 513         | 6434 |    
+| Adafruit_CircuitPython_Register                        | 330         | 5646 |    
+| Adafruit_CircuitPython_MCP230xx                        | 290         | 8731 |    
+| Adafruit_CircuitPython_PCA9685                         | 129         | 3206 |    
+| Adafruit_CircuitPython_Motor                           | 119         | 3335 |    
+| Adafruit_CircuitPython_ServoKit                        | 112         | 3010 |    
+| Adafruit_CircuitPython_HT16K33                         | 100         | 1070 |    
+| Adafruit_CircuitPython_SSD1306                         | 90          | 2106 |    
 
 ## Upcoming events!
 
@@ -105,7 +145,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1583 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help – CircuitPython messaging to other languages!
 
